--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -15,7 +15,7 @@
     }
     @media screen and (min-width: $viewport-medium) {
         &Header {
-            padding-top: 1rem;
+            padding-top: .5rem;
         }
         &Header {
             &-container {
